syntax = "proto3";

package errmsg;
option go_package="github.com/qsock/qim/lib/proto/errmsg";

message ErrMsg {
  int32 code = 1;
  string message = 2;
}